--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="action_settings">Settings</string>
     <string name="maintab_favourites">Favourites</string>
     <string name="maintab_all">All</string>
+    <string name="races">Races</string>
+    <string name="dataUpdated">Data was updated</string>
 </resources>
