--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="nextWeek">Next week</string>
     <string name="maintab_series">Series</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="no_favourites_selected">You don\'t have any favourite series yet.\nTo select new ones touch the bottom right button.</string>
 </resources>
