--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,10 @@
     <string name="notifRaceBefore" formatted="false">%s race is staring in %d minutes</string>
     <string name="notifRace" formatted="false">%s race is staring</string>
     <string name="notifRaceToday" formatted="false">%s race today</string>
+    <string name="alarmSet">Alarm is set</string>
+    <string name="alarmNotSet">Error setting the alarm</string>
+    <string name="raceToday">Race is today</string>
+    <string name="alarmInPast">Can\'t set alarm in the past</string>
+    <string name="maintab_notifications">Notifications</string>
+    <string name="action_notifications">Notifications</string>
 </resources>
