--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,8 +43,8 @@
     <string name="maintab_about">About</string>
     <string name="action_about">About</string>
     <string name="dataVersion">Database</string>
-    <string name="devName">Pedro J T Martins</string>
-    <string name="devEmail">racingcalendar.pm@gmail.com</string>
+    <string name="devName" translatable="false">Pedro J T Martins</string>
+    <string name="devEmail" translatable="false">racingcalendar.pm@gmail.com</string>
 
     <string name="maintab_settings">Settings</string>
     <string name="minutesBefore">min before green flag</string>
