--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <string name="noBrowser">No web browser found. You must install an app capable of opening web links.</string>
     <string name="settinns_links">Web links</string>
     <string name="settings_open_link_in_app">Open in default browser</string>
+
+    <string name="newSeries">New series\n</string>
 </resources>
