Add support for multiple races

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -62,4 +62,6 @@
 
     <string name="newSeries">Séries adicionadas\n</string>
     <string name="action_rate">Avaliar</string>
+
+    <string name="raceShort">C</string>
 </resources>
