--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="errorLoadingStandings" >An error has occurred loading the standings. Please try again later.</string>
     <string name="results">Results</string>
     <string name="openResults">Open results</string>
+    <string name="times">Time/Delay</string>
 </resources>
