Add capability to remotely delete races

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -68,13 +68,13 @@
     <string name="action_rate">Avaliar</string>
 
     <string name="raceShort">C</string>
-
     <string name="standings">Classificação</string>
-    <string name="results">Classificação</string>
     <string name="position">Pos</string>
     <string name="name">Nome</string>
     <string name="points">Pts</string>
     <string name="times">Tempo/Delta</string>
-    <string name="errorLoadingStandings">Ocorreu um erro a carregar as classificações. Tente novamente mais tarde.</string>
+    <string name="errorLoadingStandings">Não foi possível carregar as classificações. Tente novamente mais tarde.</string>
+
+    <string name="results">Classificação</string>
 
 </resources>
