Add internet connection checks

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -77,4 +77,7 @@
 
     <string name="releaseNotesMsg">
         .Adicionadas classificações gerais.\n.Adicionados resultados por corrida.\n\nNota: A cobertura das classificações será aumentada em futuras atualizações.</string>
+
+    <string name="noInternetConnection">Sem ligação à internet. Por favor verifique a ligação e tente novamente.</string>
+    <string name="notInternetFirstInit">Sem ligação à internet. Na primeira inicialização é necessária uma ligação ativa. Por favor verifique a ligação e tente novamente.</string>
 </resources>
