--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,7 @@
     <string name="releaseNotesMsg">
         .Added series standings.\n.Added race results.\n\nNote: Standings and results coverage will be further increased on future updates.</string>
 
+    <string name="noInternetConnection">No internet connection. Please make sure you\'re connected and try again.</string>
+    <string name="notInternetFirstInit">No internet connection. For the first initialization you must have an active connection. Please make sure you\'re connected and try again.</string>
+
 </resources>
