Add error resources

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -73,7 +73,7 @@
     <string name="name">Nome</string>
     <string name="points">Pts</string>
     <string name="times">Tempo/Delta</string>
-    <string name="errorLoadingStandings">Não foi possível carregar as classificações. Tente novamente mais tarde.</string>
+    <string name="errorLoadingStandings">As classificações ainda não estão disponíveis. Tente novamente mais tarde.</string>
 
     <string name="releaseNotesMsg">
         .Adicionadas classificações gerais.\n.Adicionados resultados por corrida.\n\nNota: A cobertura das classificações será aumentada em futuras atualizações.</string>
